[gd_scene load_steps=18 format=2]

[ext_resource path="res://Enemies/Bat.png" type="Texture" id=1]
[ext_resource path="res://Shadows/SmallShadow.png" type="Texture" id=2]
[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/bat.gd" type="Script" id=4]
[ext_resource path="res://stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://PlayerDetection.tscn" type="PackedScene" id=6]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=7]
radius = 4.0
height = 0.0

[sub_resource type="CapsuleShape2D" id=8]
radius = 7.49099
height = 7.79344

[sub_resource type="CircleShape2D" id=9]
radius = 71.9541

[sub_resource type="CircleShape2D" id=10]
radius = 3.37263

[node name="bat" type="KinematicBody2D"]
collision_layer = 2147483652
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
frame = 3
playing = true

[node name="shadow" type="Sprite" parent="."]
position = Vector2( 0, 16 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 16 )
shape = SubResource( 7 )

[node name="hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" parent="hurtbox" index="0"]
position = Vector2( 0, 2.67733 )
shape = SubResource( 8 )

[node name="stats" parent="." instance=ExtResource( 5 )]
max_health = 2

[node name="PlayerDetection" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="PlayerDetection" index="0"]
shape = SubResource( 9 )

[node name="hitbox" parent="." instance=ExtResource( 7 )]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" parent="hitbox" index="0"]
position = Vector2( 0.105114, -3.25848 )
shape = SubResource( 10 )
[connection signal="registered_hit" from="hurtbox" to="." method="_on_hurtbox_registered_hit"]
[connection signal="no_curr_health" from="stats" to="." method="_on_stats_no_curr_health"]

[editable path="hurtbox"]

[editable path="PlayerDetection"]

[editable path="hitbox"]
